--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  background-color: antiquewhite;
+}
+
+h1 {
+  font-family: 'Optima', 'Segoe', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+  padding-top: 1rem;
+  font-size: 40px;
 }
